Se agregó un botón para ir desde la página 'Lista de clientes' a 'Registro de clientes'

--- a/client list.html
+++ b/client list.html
@@ -20,7 +20,7 @@
                     <th>Número telefónico</th>
                 </tr>
             </table>
-            <a href="registration.html">Usuarios registrados</a>
+            <a href="registration.html">Registrar clientes</a>
             </form>
         </div>
     </form>
